# unvenv

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  hooks.toml  install.sh  justfile  rustfmt.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deps.yml  release.yml
scripts/: release.sh
src/: completions.rs  doctor.rs  main.rs  update.rs
tests/: integration_test.rs
