[package]
name = "unvenv"
version = "1.0.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/unvenv"
keywords = ["cli", "tool", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Deny common issues
enum_glob_use = "deny"
wildcard_imports = "deny"

# Allow only unavoidable Windows ecosystem duplicates
multiple_crate_versions = "allow" # Windows ecosystem unavoidable duplicates

# Quality checks - maximum aggression
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.22"